# NotKinoPoiskAPI

./: .gitignore  build.cmd  changelog.md  env.default  make_docs.cmd  manifest.json  pyproject.toml  readme.md  requirements.txt  setup.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  custom.yml  feature_request.yml
.github/workflows/: docs.yml  unittest.yml  workflow.yml  workflow.yml.temp
NotKinoPoiskAPI/Controller/: CacheController.py  Connector.py  Films.py  KpUser.py  Media.py  NKPA.py  ObjectController.py  ProxyController.py  Staff.py
NotKinoPoiskAPI/Endpoint/: Films.py  KpUser.py  Media.py  NKPA.py  Staff.py
NotKinoPoiskAPI/Enums/: ApiAccountType.py  CollectionType.py  DistributionSubType.py  DistributionType.py  ErrorCode.py  FactType.py  FilmsFilterOrder.py  ImageType.py  KpMonth.py  MovieType.py  PremiereMonth.py  ProductionStatus.py  Profession.py  ProxyType.py  RelationType.py  ReviewOrder.py  ReviewType.py  Sex.py  VideoResponseItemSite.py
NotKinoPoiskAPI/Errors/: ApiError.py
NotKinoPoiskAPI/Responses/: ApiKeyResponse.py  AwardResponse.py  BoxOfficeResponse.py  DigitalReleaseResponse.py  DistributionResponse.py  ExternalSourceResponse.py  FactResponse.py  FilmCollectionResponse.py  FilmSearchByFiltersResponse.py  FilmSearchResponse.py  FilmSequelsAndPrequelsResponse.py  FiltersResponse.py  GeneralResponse.py  ImageResponse.py  KinopoiskUserVoteResponse.py  MediaPostsResponse.py  PersonByNameResponse.py  PersonResponse.py  PersonResponseFilms.py  PersonResponseSpouse.py  PremiereResponse.py  ReviewResponse.py  (+4 more)
docs/: make.py
(+277 files in other folders)
