[project]
name = "notkinopoiskapi"
version = "1.0.0"
description = "Неофициальная библиотека для Kinopoisk API Unofficial"
authors = [
    { "name" = "Maxim Harder", "email" = "dev@devcraft.club"}
]
license = { file = "LICENSE" }
readme = "readme.md"
classifiers = [
    "License :: OSI Approved :: GNUv3 License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.8"
dependencies = [
    "requests",
    "python-decouple"
]
keywords = ['api', 'kinopoisk', 'python']

[project.urls]
homepage = "https://devcraft.club/downloads/notkinopoiskapi.28/"
repository = "https://github.com/DevCraftClub/NotKinoPoiskAPI"
issues = "https://github.com/DevCraftClub/NotKinoPoiskAPI"
